--- a/src/index.css
+++ b/src/index.css
@@ -18,16 +18,15 @@ a {
   font-weight: 500;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 body {
-  display: flex;
-  place-items: center;
   margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  width: 100%;
 }
 
 h1 {
@@ -46,9 +45,11 @@ button {
   font-size: 1em;
   font-family: inherit;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -59,9 +60,11 @@ button:focus-visible {
     background-color: #ffffff;
     color: #213547;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
