feat: migrate to @sys42 and improve usability

--- a/src/Popup.module.css
+++ b/src/Popup.module.css
@@ -3,17 +3,10 @@
   min-width: 30rem;
 }
 
-.inputVscodePath {
-  display: block;
-  box-sizing: border-box;
-  padding: 0.5em;
+.textInputVscodePath {
   width: 100%;
-  font-size: 1em;
 }
 
-.buttons {
-  display: flex;
-  justify-content: center;
-  gap: 1rem;
-  margin-top: 1em;
+.buttonLaunchVscode {
+  width: 100%;
 }
