feat: use pathname in addition to host

--- a/src/Options.module.css
+++ b/src/Options.module.css
@@ -4,6 +4,13 @@
 
 .pathListItem {
   display: flex;
+  justify-content: space-between;
+  align-items: start;
   gap: 1rem;
   padding: 0.5rem 0;
+  width: 100%;
+}
+
+.host {
+  cursor: pointer;
 }
